fix(hero): z-index bug with blur and cat image

--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -35,6 +35,7 @@
       height: auto;
       max-width: 100%;
       bottom: -4px;
+      z-index: -1;
     }
 
     .hero__background-center {
@@ -201,7 +202,7 @@
   width: 100vw;
   height: 100%;
   max-height: 180px;
-  z-index: 2;
+  z-index: 0;
   background: linear-gradient(
     0deg,
     rgba(3, 4, 6, 1) 0%,
